some plane notes about unstable descent
i’m worried it’s not coherent, though…

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -147,6 +147,20 @@ I think the relevant base-change diagram to consider is something like
 \end{center}
 A space $X$ gets pushed around this diagram like: up to $E \circ X$, over to $F \circ E \circ X$, down to $F \circ E \circ X$, where it receives a natural map \[F \circ X \to F \circ E \circ X.\]  In the case $E = F$, this is the interesting unit map, i.e., the coaction map.  Probably $\pi_* F \circ E \circ X$ is also the recipient of some map connected to the unstable version of \FH.
 
+--------
+
+I think that the unstable descent object along $E \vee F$ receives a map from a ``split descent object'', along the following lines.  Consider the $1$--simplices in $\sheaf{UD}_{E \vee F}(X)$:
+\begin{align*}
+(F \vee E) \circ (F \vee E) \circ X & \simeq F \circ (F \vee E) \circ X \times E \circ (F \vee E) \circ X \\
+& \simeq F \circ (F \circ X \times E \circ X) \times E \circ (F \circ X \times E \circ X) \\
+& \from (F \circ F \circ X \times F \circ E \circ X) \times (E \circ F \circ X \times E \circ E \circ X),
+\end{align*}
+where the last map is a K\"unneth-type map...?  (Actually, I'm not so sure about this now. I thought that having K\"unneth isomorphisms would mean that there would be an equivalence $E \circ (X \times Y) \simeq E \circ X \times E \circ Y$, but now I'm skeptical.  I think there's a map leftward of sets, but this isn't big enough: the Cartesian product of groups is (often) much smaller than the tensor product.)
+
+Anyway, if there were some splitting like this, the next step would be to check if setting $E = F$ has mechanisms in it to prevent double-counting.  (As a side question: is it clear that the unstable $E$--completion is equivalent to the unstable $E \vee E$--completion?)
+
+Probably a lot of my questions would be cleared up by actually trying to write down where the unstable coaction map comes from.  Good grief.
+
 
 
 
