another reference for the stable version of the R-W calculation

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -431,7 +431,7 @@ If $A$ is a connected $p$--divisible Hopf $k$--algebra, then \[k \to A[p^j] \to 
 
 
 \begin{remark}
-You'll notice that in $K_* \OS{H}{q+1}$ if we let the $q$--index tend to $\infty$, we get the $K$--homology of a point.  This is another way to see that the stable cooperations $K_* H$ vanish, meaning that the \emph{only} information present comes from unstable cooperations.\todo{We could even provide a quick proof of the stable calculation?  Cf.\ http://mathoverflow.net/questions/220952/localization-at-the-johnson-wilson-spectrum-and-rationalization.}
+You'll notice that in $K_* \OS{H}{q+1}$ if we let the $q$--index tend to $\infty$, we get the $K$--homology of a point.  This is another way to see that the stable cooperations $K_* H$ vanish, meaning that the \emph{only} information present comes from unstable cooperations.\todo{We could even provide a quick proof of the stable calculation?  Cf.\ http://mathoverflow.net/questions/220952/localization-at-the-johnson-wilson-spectrum-and-rationalization, http://mathoverflow.net/a/99211/1094 .}
 \end{remark}
 
 \begin{remark}
