noticed something interesting in FPFP that i want to look at again later

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -194,6 +194,10 @@ Section 16: examples
 Let $R$ be a complete local domain with positive residue characteristic $p$, and let $F$ be a formal group of finite height $d$ over $R$.  If $\sheaf O$ is the ring of integers in the algebraic closure of the fraction field of $R$, then $F(\sheaf O)[p^k] \cong (\Z/p^k)^d$ and $F(\sheaf O)_{\mathrm{tors}} \cong (\Q_p / \Z_p)^d$. \qed
 \end{theorem}
 
+------
+
+Section 20 of FPFP is about ``full sets of points'' and the comparison with the cohomology of the flag variety of a vector bundle.
+
 
 
 
