--- a/main.tex
+++ b/main.tex
@@ -128,7 +128,6 @@
 \newcommand{\perf}{\mathrm{perf}}
 \newcommand{\gpd}{\mathrm{gpd}}
 \newcommand{\id}{\mathrm{id}}
-\renewcommand{\div}{\mathrm{div}}
 \newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 
 \DeclareMathOperator{\Spec}{Spec}
@@ -157,6 +156,7 @@
 \DeclareMathOperator{\Sub}{Sub}
 \DeclareMathOperator{\Level}{Level}
 \DeclareMathOperator{\Mono}{Mono}
+\let\div\undefined\DeclareMathOperator{\div}{div}
 
 \numberwithin{equation}{section}
 
@@ -295,9 +295,11 @@ PAST END\fi%
 \newpage
 \tableofcontents
 
-\todo{I would like as few section titles as possible to involve people's names.}
+\todo[inline]{I would like as few section titles as possible to involve people's names.}
 
-\todo{A bunch of broken displaymode tombstones can have their positions fixed by using http://tex.stackexchange.com/a/66221/2671.}
+\todo[inline]{A bunch of broken displaymode tombstones can have their positions fixed by using http://tex.stackexchange.com/a/66221/2671.}
+
+\todo[inline]{Compile an index by replacing all the \texttt{textit} commands in definition environments with some more fancy macro that tags it for inclusion.}
 
 
 
