--- a/mo.tex
+++ b/mo.tex
@@ -51,7 +51,7 @@ B\GL_1 S^{n-1} \times B\GL_1 S^{m-1} \arrow{r} & B\GL_1 S^{n+m-1}.
 There is a map of $H$--spaces $J_{\R}: BO \to B\GL_1 \S$ called the \textit{stable $J$--homomorphism}. \qed
 \end{corollary}
 \noindent Finally, we can ask about the compatibility of $T$ with all of this:
-\begin{lemma}
+\begin{lemma}\label{ThomSpacesAreMonoidal}
 $T$ is monoidal: it carries external fiberwise joins to smash products of Thom spaces. \qed
 \end{lemma}
 
@@ -290,7 +290,7 @@ Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that 
 
 
 
-\section{Hopf algebra cohomology}
+\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
 \todo{This section is written gradedly and probably shouldn't be, for consistency.} Today we'll focus on an important classical tool: the Adams spectral sequence.  We're going to study this in greater earnest later on, so I will avoid giving a satisfying construction today.  But, even without a construction, it's instructive to see how such a thing comes about.  \todo{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to.}  Begin by considering the following three self-maps of the stable sphere:
 \begin{align*}
