to-do about the algebraic example associated to descent

--- a/finite.tex
+++ b/finite.tex
@@ -44,6 +44,10 @@ talk about how equivalence of groupoids induces equivalence of sheaf categories
 
 ------
 
+\todo[inline]{I would like to put an example here for the composite map $\Z \to \Z^\wedge_p \to \Z/p$.  Without passing to the derived category, doing descent from $\Z$--modules to $\Z/p$--modules is obviously impossible, but I think that in the derived category descending an (honest) module from $\Z$ to descent data over $\Z/p$ is exactly enough information to reconstruct an (honest) module over $\Z^\wedge_p$.}
+
+------
+
 We now transfer what we've learned to the situation of homotopical algebra.  Recalling that spectra are equivalent to $\S$--modules, $\S$ the usual sphere spectrum, then any other ring spectrum comes equipped with a unit map $\eta: \S \to E$ and hence push and pull functors $\eta_*$ and $\eta^*$.  Correspondingly, to any spectrum $X$ we can define the following cosimplicial spectrum:
 \begin{definition}
 Let $\sheaf D_E(X)$ be the cosimplicial spectrum determined by the formula
