--- a/quillen.tex
+++ b/quillen.tex
@@ -450,7 +450,8 @@ where the bottom map acts by \[(D_1, D_2 \subseteq \CP^\infty_E \times X_E) \map
 By the splitting principle, it is enough to check this on sums of line bundles.  A sum of line bundles corresponds to a totally decomposed divisor, and on a pair of such divisors $\bigsqcup_{i=1}^n [a_i]$ and $\bigsqcup_{j=1}^m [b_j]$, the map acts by \[\left(\bigsqcup_{i=1}^n [a_i] \right) \left( \bigsqcup_{j=1}^m [b_j] \right) = \bigsqcup_{i, j} [\mu_{\CP^\infty_E}(a_i, b_j)]. \qedhere\]
 \end{proof}
 
-Finally, we can connect our analysis of the divisors coming from topological vector bundles with the line bundles studied at the start of the section.  Suppose that $V$ is a line bundle over $X$, classified by a map $\xi \co X \to \CP^\infty$.  In terms of algebraic geometry, the map $b$ defines an $X_E$--valued point $b = b_E$ of $\G$, and it follows that \[\ThomSheaf{V} \cong b^* \sheaf I(0) \cong 0^* \sheaf I(-b).\]  Next, consider the line bundle $V \otimes \L$ over $X \times \CP^\infty$.  Then $\ThomSheaf{V \otimes \L}$ is pulled back from $\sheaf I_{\G} (0)$ along the map \[X_E \times \G \xrightarrow{b \times 1} \G \times \G \xrightarrow{\mu} \G,\] from which it follows that \[\ThomSheaf{V \otimes \L} \cong T_b^* \sheaf I(0) = \sheaf I_{X_E \times \G}(-b).\]  More generally, suppose $V = \sum_i n_i \L_i$ is a virtual sum of line bundles over $X$.  The line bundles $\L_i$ define points $b_i$ of $\G$ over $X_E$, and the bundle $V$ determines the divisor $D = \sum_i n_i [b_i]$.  Together, this means \[\ThomSheaf{V \otimes \L} = \sheaf I_{X_E \times \G}(-D).\]  By the splitting principle, $\ThomSheaf{V \otimes \L}$ can be computed in this manner even when $V$ is not a virtual sum of line bundles: the divisor associated to $\sheaf I_{(Y_\xi)_E \times \G}(-D)$ descends to $X_E \times \G$, even if none of its points do.  Finally, pulling back along the map \[X_E \times * \xrightarrow{\id \times 0} X_E \times \G\] describes $\ThomSheaf{V}$ as the restriction of the ideal sheaf of $\P(E)$ along the zero-section of $\G_E$.
+Finally, we can connect our analysis of the divisors coming from topological vector bundles with the line bundles studied at the start of the section.  Suppose that $V$ is a line bundle over $X$, classified by a map $\xi \co X \to \CP^\infty$.  In terms of algebraic geometry, the map $b$ defines an $X_E$--valued point $b = b_E$ of $\G$, and it follows that \[\ThomSheaf{V} \cong b^* \sheaf I(0) \cong 0^* \sheaf I(-b).\]  Next, consider the line bundle $V \otimes \L$ over $X \times \CP^\infty$.  Then $\ThomSheaf{V \otimes \L}$ is pulled back from $\sheaf I_{\G} (0)$ along the map \[X_E \times \G \xrightarrow{b \times 1} \G \times \G \xrightarrow{\mu} \G,\] from which it follows that \[\ThomSheaf{V \otimes \L} \cong T_b^* \sheaf I(0) = \sheaf I_{X_E \times \G}(-b).\]  More generally, suppose $V = \bigoplus_i n_i \L_i$ is a virtual sum of line bundles over $X$.  The line bundles $\L_i$ define points $b_i$ of $\G$ over $X_E$, and the bundle $V$ determines the divisor $D = \sum_i n_i [b_i]$.  Together, this means \[\ThomSheaf{V \otimes \L} = \sheaf I_{X_E \times \G}(-D).\]  By the splitting principle, $\ThomSheaf{V \otimes \L}$ can be computed in this manner even when $V$ is not a virtual sum of line bundles: the divisor associated to $\sheaf I_{(Y_\xi)_E \times \G}(-D)$ descends to $X_E \times \G$, even if none of its points do.  Finally, pulling back along the map \[X_E \times * \xrightarrow{\id \times 0} X_E \times \G\] describes $\ThomSheaf{V}$ as the restriction of the ideal sheaf of $\P(V)$ along the zero-section of $\G_E$.
+\todo{You didn't say anything about $\P(V)$ until the very last line, so this is clearly incomplete.}
 
 
 \todo{I think another definition of the Thom space is as the cofiber of $\P(V) \to \P(V \oplus \C)$.  This might come in handy.}
