admit to using manifold geometry a lil bit

--- a/intro.tex
+++ b/intro.tex
@@ -79,7 +79,7 @@ For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
 \item Analytic techniques will be completely omitted.  Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, and this often means heavy analytic work.  We will strictly confine ourselves to the domain of homotopy theory.
-\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  Again, much of the contemporary research about $\tmf$ is in attempt to find a geometric model, so that geometric techniques can be imported (including equivariance and the geometry of quantum field theories, to name two).
+\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  (We do give a proof of Quillen's theorem on the structure of $MU_*$ which invokes some mild amount of manifold geometry.)  Again, much of the contemporary research about $\tmf$ is in attempt to find a geometric model, so that geometric techniques can be imported --- including equivariance and the geometry of quantum field theories, to name two.
 \item In a different direction, our focus will not linger on actually computing bordism rings $MX_*$, nor will we consider geometric constructions on manifolds and their behavior after imagining into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
 \item The geometry of $E_\infty$ rings will also be avoided.  These really are inescapable at the conclusion of the story we will tell here, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part and leave $E_\infty$ rings to other authors.
 \end{itemize}
