--- a/quillen.tex
+++ b/quillen.tex
@@ -184,7 +184,7 @@ We now have a solid foundation for the most important case of the complex-orient
 \begin{theorem}[{\Cref{ThomIsomOverC}}]
 For a complex vector bundle $\xi$ on a space $X$ and a complex-oriented ring spectrum $E$, there is a natural equivalence \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X. \qed\]
 \end{theorem}
-Recalling also the perspective on modules as quasicoherent sheaves from \Cref{HopfAlgebraLecture}, we are thus moved to study sheaves on $X_E$ which are $1$--dimensional --- i.e., line bundles.  Having said all that, we will leave the topology for tomorrow and focus on the algebra today.  We fix the following three pieces of data:
+Recalling also the perspective on modules as quasicoherent sheaves from \Cref{HopfAlgebraLecture}, we are thus moved to study sheaves of modules on $X_E$ which are $1$--dimensional --- i.e., line bundles.  Having said all that, we will leave the topology for tomorrow and focus on the algebra today.  We fix the following three pieces of data:
 \begin{itemize}
 \item $S$ is our ``base'' formal scheme.
 \item $C$ is a formal curve over $S$.
@@ -468,7 +468,7 @@ Finally, we can connect our analysis of the divisors coming from topological vec
 
 \section{Operations and a model for cobordism}
 
-Our eventual goal, like last time, is to give an algebro-geometric description of $MU_*(*)$ and of the cooperations $MU_* MU$.  There is such a description that passes through the Adams spectral sequence, also like last time, but $MU_*(*)$ is an integral algebra and so we cannot make do with working out the mod--$2$ Adams spectral sequence.  We would have to at least work out the mod--$p$ Adams spectral sequence for every $p$, but there is the following unfortunate theorem:
+Our eventual goal, like in \Cref{UnorientedBordismChapter}, is to give an algebro-geometric description of $MU_*(*)$ and of the cooperations $MU_* MU$.  There is such a description that passes through the Adams spectral sequence, also like last time, but $MU_*(*)$ is an integral algebra and so we cannot make do with working out the mod--$2$ Adams spectral sequence alone.  We would have to at least work out the mod--$p$ Adams spectral sequence for every $p$, but there is the following unfortunate theorem:
 \begin{theorem}
 There is an isomorphism
 \[H\F_pP_0 H\F_pP \cong \F_p[\xi_0^\pm, \xi_1, \xi_2, \ldots] \otimes \Lambda[\tau_0, \tau_1, \ldots]\]
@@ -478,9 +478,9 @@ with $|\xi_j| = 2p^j-2$ and $|\tau_j| = 2p^j - 1$. \qed
 
 There is such an alternative proof, due to Quillen, that bypasses the Adams spectral sequence.  This approach has some deficiencies of its own: it requires studying the algebra of operations $MU^* MU$, which we do not expect to be at all commutative, and it requires studying \textit{power operations}, which are in general very technical creatures.  However, we will eventually want to talk about power operations anyway, and because this is the road less traveled we will elect to take it.  Our job today is to define these two kinds of cohomology operations, as well as revisit the model of complex cobordism Quillen uses.
 
-The description of the first class of operations follows immediately from our discussion of complex cobordism up to this point, so we will begin there.  We learned last time that for any complex-orientable cohomology theory $E$ we have the calculation \[E^* BU \cong E^*\llbracket \sigma_1, \sigma_2, \ldots, \sigma_j, \ldots\rrbracket,\] and we gave a rich interpretation of this in terms of divisor schemes: \[BU_E \cong \Div_0 \CP^\infty_E.\]  Two lectures ago, we learned that the stable divisor scheme has a universal property: it is the free formal group on the formal curve $\CP^\infty_E$.  Another avatar of this same fact is a description of the \emph{homology ring}, using the maps \[E_* BU(n) \otimes E_* BU(m) \to E_* BU(n+m)\] to induce a multiplicative structure on $E_* BU$:
+The description of the first class of operations follows immediately from our discussion of complex cobordism up to this point, so we will begin there.  We learned last time that for any complex-oriented cohomology theory $E$ we have the calculation \[E^* BU \cong E^*\llbracket \sigma_1, \sigma_2, \ldots, \sigma_j, \ldots\rrbracket,\] and we gave a rich interpretation of this in terms of divisor schemes: \[BU_E \cong \Div_0 \CP^\infty_E.\]  Two lectures ago, we learned that the stable divisor scheme has a universal property: it is the free formal group on the formal curve $\CP^\infty_E$.  Another avatar of this same fact is a description of the \emph{homology ring}, using the maps \[E_* BU(n) \otimes E_* BU(m) \to E_* BU(n+m)\] to induce a multiplicative structure on $E_* BU$:
 \begin{corollary}
-Let $E$ be a complex-orientable cohomology theory. Then: \[E_* BU \cong \Sym_{E_*} \widetilde E_* \CP^\infty.\]  A specific complex orientation of $E$ begets \[E_* \CP^\infty = E_*\{\beta_0, \beta_1, \ldots, \beta_n, \ldots\}\] and hence \[E_* BU = \Sym_{E_*} E_*\{\beta_1, \beta_2, \ldots\} = E_*[b_1, b_2, \ldots]. \qed\]
+Let $E$ be a complex-orientable cohomology theory. Then: \[E_* BU \cong \Sym_{E_*} \widetilde E_* \CP^\infty.\]  A specific complex orientation of $E$ begets \[E_* \CP^\infty \cong E_*\{\beta_0, \beta_1, \ldots, \beta_n, \ldots\}\] and hence \[E_* BU \cong \Sym_{E_*} E_*\{\beta_1, \beta_2, \ldots\} = E_*[b_1, b_2, \ldots]. \qed\]
 \end{corollary} \oweproof{Free formal schemes agree with symmetric Hopf algebras on comodules}
 
 Thomifying these ``$\oplus$'' maps gives maps \[E_* MU(n) \otimes E_* MU(m) \to E_* MU(n+m),\] and the naturality of the $E$--Thom isomorphism produces an additional corollary:
@@ -490,9 +490,9 @@ The Thom isomorphism $E_* BU \cong E_* MU$ respects both the $E_*$--module struc
 
 \todo{A corollary of the splitting principle is supposed to be that a Thom isomorphism for $\CP^\infty$ begets Thom isomorphisms for everything, and hence a ring spectrum map $MU \to E$.  We should produce that corollary now.  This is Lemma II.4.6 in Adams's blue book.}
 
-\noindent This compact description of $E_* MU$ as an algebra will be useful to us later, but right now we are interested in $E^* MU$ and especially in $MU^* MU$.  The former is \emph{not} a ring, and although the latter is a ring its multiplication is exceedingly complicated.  Instead, we will content ourselves with an $E_*$--module basis:
+\noindent This compact description of $E_* MU$ as an algebra will be useful to us later, but right now we are interested in $E^* MU$ and especially in $MU^* MU$.  The former is \emph{not} a ring\todo{Does this totally prohibit us from giving a formal group re-exposition of Quillen's proof?  I wonder...}, and although the latter is a ring its multiplication is exceedingly complicated.  Instead, we will content ourselves with an $E_*$--module basis:
 \begin{definition}
-Let $\alpha = (\alpha_1, \ldots, \alpha_n, \ldots)$ denote a multi-index where every entry is nonnegative and almost every entry is zero, and let $c_\alpha$ denote the corresponding monomial \[c_\alpha = \prod_{j=1}^\infty c_j^{\alpha_j}.\]  Additionally, we let $s_\alpha \in E^* MU$ denote the image of $c_\alpha$ under the Thom isomorphism.  It is called the \textit{$\alpha${\th} Landweber--Novikov operation}.
+Let $\alpha = (\alpha_1, \ldots, \alpha_n, \ldots)$ denote a multi-index where every entry is nonnegative and almost every entry is zero, and let $c_\alpha$ denote the corresponding monomial \[c_\alpha = \prod_{j=1}^\infty c_j^{\alpha_j}.\]  Additionally, we let $s_\alpha \in E^* MU$ denote the image of $c_\alpha$ under the Thom isomorphism.  It is called the \textit{$\alpha${\th} Landweber--Novikov operation} (from $MU$ to $E$).
 \end{definition}
 
 \begin{remark}\citeme{I.5.1 in Adams's blue book}
@@ -503,7 +503,7 @@ Let $E = MU$.  The Landweber--Novikov operations are the \emph{stable} operation
 \item $s_\alpha$ is stable: $s_\alpha(\sigma x) = \sigma(s_\alpha x)$.
 \item $s_\alpha$ is additive: $s_\alpha(x + y) = s_\alpha(x) + s_\alpha(y)$.
 \item $s_\alpha$ satisfies a Cartan formula.  Define \[s_{\t}(x) = \sum_\alpha s_\alpha(x) \cdot t_1^{\alpha_1} t_2^{\alpha_2} \cdots t_n^{\alpha_n} \cdots =: \sum_{\alpha} s_\alpha(x) \t^\alpha\] for an infinite sequence of indeterminates $t_1$, $t_2$, \ldots.  Then: \[s_{\t}(x y) = s_{\t}(x) \cdot s_{\t}(y).\]
-\item Let $\xi: X \to BU(n)$ classify a vector bundle and let $\phi$ denote the Thom isomorphism \[\phi: MU^* X \to MU^* T(\xi).\]  Then the Chern classes of $\xi$ are related to the Landweber--Novikov operations on the Thom spectrum by the formula \[\sum_\alpha \phi c_\alpha(\xi) \t^\alpha = \sum_\alpha s_\alpha \phi(1) \t^\alpha.\]
+\item Let $\xi\co X \to BU(n)$ classify a vector bundle and let $\phi$ denote the Thom isomorphism \[\phi\co MU^* X \to MU^* T(\xi).\]  Then the Chern classes of $\xi$ are related to the Landweber--Novikov operations on the Thom spectrum by the formula \[\sum_\alpha \phi c_\alpha(\xi) \t^\alpha = \sum_\alpha s_\alpha \phi(1) \t^\alpha.\]
 \end{itemize}
 \end{remark}
 
@@ -523,7 +523,7 @@ through a complex vector bundle $E$ on $X$ such that $i$ is an embedding and its
 For $\dim E \gg 0$, this equivalence class is unique, if it exists. \qed
 \end{lemma}
 \begin{definition}
-Two complex-oriented maps $f_0: Y_0 \to X$ and $f_1: Y_1 \to X$ are called \textit{cobordant} when there is a complex-oriented map $W \to X \times \R$ and elements $b_0, b_1 \in \R$ such that
+Two complex-oriented maps $f_0\co Y_0 \to X$ and $f_1\co Y_1 \to X$ are called \textit{cobordant} when there is a complex-oriented map $W \to X \times \R$ and elements $b_0, b_1 \in \R$ such that
 \begin{center}
 \begin{tikzcd}
 Y_0 \arrow{r} \arrow{d} & X \times \{b_0\} \arrow{d} & Y_1 \arrow{r} \arrow{d} & X \times \{b_1\} \arrow{d} \\
@@ -538,17 +538,17 @@ For a manifold $X$, $MU^{-q}(X)$ is canonically isomorphic to the cobordism clas
 \end{theorem}
 
 \begin{remark}
-This model has a variety of nice features.  For instance, its two variances are visible from the construction: a map $g: X' \to X$ induces a map $g^*: MU^* X \to MU^* X'$ by selecting a class $f: Y \to X$, perturbing $g$ so that it is transverse to $f$, and taking the pullback
+This model has a variety of nice features.  For instance, its two variances are visible from the construction: a map $g\co X' \to X$ induces a map $g^*\co MU^* X \to MU^* X'$ by selecting a class $f\co Y \to X$, perturbing $g$ so that it is transverse to $f$, and taking the pullback
 \begin{center}
 \begin{tikzcd}
 Y \times_X X' \arrow{r} \arrow{d} & Y \arrow{d} \\
 X' \arrow{r} & X.
 \end{tikzcd}
 \end{center}
-But, also, if $g$ is additionally proper and complex-orientable, then it induces a map $g_*: MU^q X' \to MU^{q-d} X$, where $d$ is the dimension of $g$.  This is simply by postcomposition: a representative $f': Y' \to X'$ begets a new representative $g_* f' = g \circ f'$.\todo{Give this a name: Gysin, pushforward, shriek, \ldots}
+But, also, if $g$ is additionally proper and complex-orientable, then it induces a map \[g_*\co MU^q X' \to MU^{q-d} X,\] where $d$ is the dimension of $g$.  This is simply by postcomposition: a representative $f'\co Y' \to X'$ begets a new representative $g_* f' = g \circ f'$.  This construction goes by various names: the \textit{Gysin map}, the \textit{complex-oriented pushforward}, the \textit{shriek map}, \ldots.
 \end{remark}
 
-In fact, these push and pull maps are related by a formula:
+While we're here, let's note that these push and pull maps are related:
 \begin{lemma}\label{PushPullFormulaForMU}
 Consider a Cartesian square of manifolds
 \begin{center}
@@ -557,7 +557,7 @@ Y \times_X Z \arrow{r}{g'} \arrow{d}{f'} & Z \arrow{d}{f} \\
 Y \arrow{r}{g} & X,
 \end{tikzcd}
 \end{center}
-where $g$ is transversal to $f$, $f$ is proper and complex-oriented, and $f'$ is endowed with the pull-back of the complex orientation of $f$. Then \[g^* f_* = f'_* (g')^*: h(Z) \to h(Y). \qed\]
+where $g$ is transversal to $f$, $f$ is proper and complex-oriented, and $f'$ is endowed with the pull-back of the complex orientation of $f$. Then \[g^* f_* = f'_* (g')^*\co h(Z) \to h(Y). \qed\]
 \end{lemma}
 
 
@@ -575,7 +575,7 @@ A picky reader will (rightly) point out that $BG$ is not a manifold, and so we s
 \end{remark}
 
 \begin{remark}
-The chain model for ordinary homology is actually rigid enough to define power operations there, too.  Curiously, they are all generated by the quadratic power operations (i.e., the ``squares''), and all the quadratic power operations turn out to be \emph{additive} --- that is, you just get the Steenrod squares again!  This appears to be a curious degeneracy, but over the coming days we will exploit something similar with a very particular power operation in complex cobordism.
+The chain model for ordinary homology is actually rigid enough to define power operations there, too.  Curiously, they are all generated by the quadratic power operations (i.e., the ``squares''), and all the quadratic power operations turn out to be \emph{additive} --- that is, you just get the Steenrod squares again!  This appears to be a lucky degeneracy, but over the coming days we will exploit something similar with a very particular power operation in complex cobordism.
 \end{remark}
 
 \todo{Can we name some of the formal properties of power operations? Multiplicativity, say?}
